# shARC

./: README.md  config.json  environment.yml  keys.env  pyproject.toml  ruff.toml
hpc_interface/: gpu_run.sh
larc_dataset/: LICENSE.md
logs/: events.out.tfevents.1738854151.aaron.911184.0  events.out.tfevents.1738854231.aaron.922830.0  events.out.tfevents.1738854332.aaron.928776.0  events.out.tfevents.1738854617.aaron.958196.0  events.out.tfevents.1738854648.aaron.961344.0  events.out.tfevents.1738854671.aaron.963949.0  events.out.tfevents.1738854760.aaron.972701.0  events.out.tfevents.1738854908.aaron.987086.0
output/singles/: responses.json
results/checkpoint-4500/: adapter_config.json  adapter_model.safetensors  rng_state.pth  scheduler.pt  trainer_state.json
results/checkpoint-4800/: adapter_model.safetensors  scheduler.pt  trainer_state.json
src/: inference.py  main.py  train.py
src/classes/: DataLoader.py  __init__.py  base_class_with_logger.py  data_loader.py  helper.py  logger_setup.py  project_strings.py
src/utils/: constrained_gen.py  find_similar_grid.py  generate_aug_training.py  generate_train_output_for_llm.py  larc_dataset_interface.py
wandb/: latest-run
wandb/run-20250206_150233-m9c6zee0/: run-m9c6zee0.wandb
wandb/run-20250206_150353-uz276wk5/: run-uz276wk5.wandb
wandb/run-20250206_150534-7alx7mt3/: run-7alx7mt3.wandb
wandb/run-20250206_151018-t3qogqpz/: run-t3qogqpz.wandb
wandb/run-20250206_151049-ngcbh9ek/: run-ngcbh9ek.wandb
wandb/run-20250206_151112-j8szfz41/: run-j8szfz41.wandb
(+23 files in other folders)
