[tool.poetry]
name = "sharc"
version = "0.1.0"
description = ""
authors = ["Aaron Flethcer <afletcher53@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
